update dos certificados, cv e da galeria

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             <p class="center bigHome">Olá! O meu nome é</p>
             <h1 data-value="ANTÓNIO CRUZ">ANTÓNIO CRUZ</h1>
             <p class="center bigHome">e sou recém-licenciado em Engenharia Informática,</p>
-            <p class="center mediumHome"> para além de ser um entusiasta em desenvolvimento de software e inteligência artificial.
+            <p class="center mediumHome"> para além de ser um entusiasta em Inteligência Artificial,
+                Desenvolvimento de Software e Desenvolvimento de Jogos Digitais.
                 Procuro agora uma oportunidade de trabalho para desenvolver as minhas capacidades e crescer como profissional e como pessoa.
             </p>
             <div class="cv">
@@ -72,22 +73,76 @@
                 </div>
                 <div class="gallery-image">
                     <div class="image-wrapper">
-                        <img src="me.jpg" alt="me" class="zoomed-image">
-                        <div class="zoomed-text">example here...</div>
+                        <img src="me.jpg" alt="me" class="zoomed-image"> <!-- Foto minha descontraído -->
+                        <div class="zoomed-text">Este sou eu! Um jovem de 20 anos prestes a terminar a sua licenciatura, mas ainda com muito para aprender.</div>
                     </div>
                 </div>
                 <div class="gallery-image">
                     <div class="image-wrapper">
-                        <img src="money.png" alt="money" class="zoomed-image">
-                        <div class="zoomed-text">Apesar de gostar um pouco de tudo dentro da informática, sou um entusiasta em desenvolvimento de software e inteligência artificial, 
-                            sendo estas as áreas em que mais gostei de trabalhar durante a minha licenciatura, depois de tantos projetos realizados, e também as áreas que tenho mais 
-                            interesse em desenvolver e aprender.</div>
+                        <img src="money.png" alt="money" class="zoomed-image"> <!-- Foto sobre algum trabalho, ou de mim a estudar/trabalhar -->
+                        <div class="zoomed-text">Apesar de gostar um pouco de tudo dentro da informática, sou um entusiasta em Inteligência Artificial, Desenvolvimento 
+                            de Software e Desenvolvimento de Jogos Digitais.
+                        </div>
                     </div>
                 </div>
-                <div class="gallery-image last">
+                <div class="gallery-image">
                     <div class="image-wrapper">
-                        <img src="sentimentalyst.png" alt="sentimentalyst" class="zoomed-image">
-                        <div class="zoomed-text">example here...</div>
+                        <img src="sentimentalyst.png" alt="sentimentalyst" class="zoomed-image"> <!-- Piscina da Orca -->
+                        <div class="zoomed-text">Já tive algumas experiências no mundo no trabalho, como quando trabalhei np bar da Piscina da Orca...</div>
+                    </div>
+                </div>
+                <div class="gallery-image">
+                    <div class="image-wrapper">
+                        <img src="sentimentalyst.png" alt="sentimentalyst" class="zoomed-image"> <!-- Celfinet -->
+                        <div class="zoomed-text">... e o estágio de verão que fiz na Celfinet</div>
+                    </div>
+                </div>
+                <div class="gallery-image">
+                    <div class="image-wrapper">
+                        <img src="sentimentalyst.png" alt="sentimentalyst" class="zoomed-image"> <!-- Foto de um jogo ou de mim a jogar -->
+                        <div class="zoomed-text">Sou um rapaz simples, que adora aproveitar o seu tempo livre para descontrair, jogar um pouco, ...</div>
+                    </div>
+                </div>
+                <div class="gallery-image">
+                    <div class="image-wrapper">
+                        <img src="sentimentalyst.png" alt="sentimentalyst" class="zoomed-image"> <!-- Foto de um livro ou um filme -->
+                        <div class="zoomed-text">... ler um livro ou ver filmes/séries, normalmente de ação, aventura, ficção científica e história, os meus estilos favoritos.</div>
+                    </div>
+                </div>
+                <div class="gallery-image">
+                    <div class="image-wrapper">
+                        <img src="sentimentalyst.png" alt="sentimentalyst" class="zoomed-image"> <!-- Foto de algum momento histórico -->
+                        <div class="zoomed-text">... Também gosto de tirar tempo para aprender um pouco mais sobre o mundo que nos rodeia e o seu passado, pois adoro história, ...</div>
+                    </div>
+                </div>
+                <div class="gallery-image">
+                    <div class="image-wrapper">
+                        <img src="sentimentalyst.png" alt="sentimentalyst" class="zoomed-image"> <!-- Foto do Espaço -->
+                        <div class="zoomed-text">... e aprender mais sobre matérias científicas, principalmente quando se tratam do Espaço 🤩.</div>
+                    </div>
+                </div>
+                <div class="gallery-image">
+                    <div class="image-wrapper">
+                        <img src="sentimentalyst.png" alt="sentimentalyst" class="zoomed-image"> <!-- Foto da guitarra -->
+                        <div class="zoomed-text">A música é a minha grande paixão, adoro tocar guitarra, um dos meus intrumentos favoritos e que estou a aprender a tocar sozinho, ...</div>
+                    </div>
+                </div>
+                <div class="gallery-image">
+                    <div class="image-wrapper">
+                        <img src="sentimentalyst.png" alt="sentimentalyst" class="zoomed-image"> <!-- Foto da guitarra -->
+                        <div class="zoomed-text">A música é a minha grande paixão, adoro tocar guitarra, um dos meus intrumentos favoritos e que estou a aprender a tocar sozinho, ...</div>
+                    </div>
+                </div>
+                <div class="gallery-image">
+                    <div class="image-wrapper">
+                        <img src="sentimentalyst.png" alt="sentimentalyst" class="zoomed-image"> <!-- Foto do coro -->
+                        <div class="zoomed-text">... e também adoro cantar, na verdade gosto tanto que faço parte de um coro! É o Coro Misto da Beira Interior, onde já sou membro há mais de 7 anos, ...</div>
+                    </div>
+                </div>
+                <div class="gallery-image">
+                    <div class="image-wrapper last">
+                        <img src="sentimentalyst.png" alt="sentimentalyst" class="zoomed-image"> <!-- Foto do coro -->
+                        <div class="zoomed-text">... e onde já passei muitas boas memórias, tendo viajado para outros países várias vezes para fazer concertos e participar em concursos.</div>
                     </div>
                 </div>
             </div>
@@ -194,10 +249,14 @@
                 <h3>Scrum</h3>
                 <p>Gestão de Projetos com Métodos Ágeis</p>
             </div>
+            <div class="certificate-box" onclick="openPdf('PSAnimais.pdf')">
+                <h3>Primeiros Socorros Animais</h3>
+                <p>Nunca se sabe quando vai ser preciso! 😉</p>
+            </div>
         </div>
     </section>
     <footer>
-        <p>&copy; Desenvolvido com paixão ❤️ 2024 António Cruz. Todos os direitos reservados.</p>
+        <p>&copy; Feito com dedicação ❤️ 2024 António Cruz. Todos os direitos reservados.</p>
     </footer>
 
 </body>
