mais algumas fotos e outros ajustes

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
                 Procuro agora uma oportunidade de trabalho para desenvolver as minhas capacidades e crescer como profissional e como pessoa.
             </p>
             <div class="cv">
-                <a href="CV - AntonioCruz.pdf" target="_blank">Curriculum Vitae</a>
+                <a href="/Portfolio/images/CV - AntonioCruz.pdf" target="_blank">Curriculum Vitae</a>
             </div>
         </div>
         <div class="image">
             <div class="box">
                 <span></span>
-                <img id="me" src="me.jpg" alt="me.jpg">
+                <img id="me" src="/Portfolio/images/me.jpg" alt="me.jpg">
             </div>
             <div class="border-blur"></div>
             <h2>Contacte-me</h2>
@@ -55,31 +55,31 @@
             <div class="gallery-images">
                 <div class="gallery-image first">
                     <div class="image-wrapper">
-                        <img src="me.jpg" alt="me" class="zoomed-image">
+                        <img src="/Portfolio/images/me.jpg" alt="me" class="zoomed-image">
                         <div class="zoomed-text">example here...</div>
                     </div>
                 </div>
                 <div class="gallery-image">
                     <div class="image-wrapper">
-                        <img src="money.png" alt="money" class="zoomed-image">
+                        <img src="/Portfolio/images/money.png" alt="money" class="zoomed-image">
                         <div class="zoomed-text">example here...</div>
                     </div>
                 </div>
                 <div class="gallery-image">
                     <div class="image-wrapper">
-                        <img src="sentimentalyst.png" alt="sentimentalyst" class="zoomed-image">
+                        <img src="/Portfolio/images/sentimentalyst.png" alt="sentimentalyst" class="zoomed-image">
                         <div class="zoomed-text">example here...</div>
                     </div>
                 </div>
                 <div class="gallery-image">
                     <div class="image-wrapper">
-                        <img src="me.jpg" alt="me" class="zoomed-image"> <!-- Foto minha descontraído -->
+                        <img src="/Portfolio/images/me.jpg" alt="me" class="zoomed-image"> <!-- Foto minha descontraído -->
                         <div class="zoomed-text">Este sou eu! Um jovem de 20 anos prestes a terminar a sua licenciatura, mas ainda com muito para aprender.</div>
                     </div>
                 </div>
                 <div class="gallery-image">
                     <div class="image-wrapper">
-                        <img src="money.png" alt="money" class="zoomed-image"> <!-- Foto sobre algum trabalho, ou de mim a estudar/trabalhar -->
+                        <img src="/Portfolio/images/money.png" alt="money" class="zoomed-image"> <!-- Foto sobre algum trabalho, ou de mim a estudar/trabalhar -->
                         <div class="zoomed-text">Apesar de gostar um pouco de tudo dentro da informática, sou um entusiasta em Inteligência Artificial, Desenvolvimento 
                             de Software e Desenvolvimento de Jogos Digitais.
                         </div>
@@ -87,61 +87,55 @@
                 </div>
                 <div class="gallery-image">
                     <div class="image-wrapper">
-                        <img src="sentimentalyst.png" alt="sentimentalyst" class="zoomed-image"> <!-- Piscina da Orca -->
+                        <img src="/Portfolio/images/orca.jpg" alt="sentimentalyst" class="zoomed-image"> <!-- Piscina da Orca -->
                         <div class="zoomed-text">Já tive algumas experiências no mundo no trabalho, como quando trabalhei np bar da Piscina da Orca...</div>
                     </div>
                 </div>
                 <div class="gallery-image">
                     <div class="image-wrapper">
-                        <img src="sentimentalyst.png" alt="sentimentalyst" class="zoomed-image"> <!-- Celfinet -->
+                        <img src="/Portfolio/images/celfinet.jpg" alt="sentimentalyst" class="zoomed-image"> <!-- Celfinet -->
                         <div class="zoomed-text">... e o estágio de verão que fiz na Celfinet</div>
                     </div>
                 </div>
                 <div class="gallery-image">
                     <div class="image-wrapper">
-                        <img src="sentimentalyst.png" alt="sentimentalyst" class="zoomed-image"> <!-- Foto de um jogo ou de mim a jogar -->
+                        <img src="/Portfolio/images/sentimentalyst.png" alt="sentimentalyst" class="zoomed-image"> <!-- Foto de um jogo ou de mim a jogar -->
                         <div class="zoomed-text">Sou um rapaz simples, que adora aproveitar o seu tempo livre para descontrair, jogar um pouco, ...</div>
                     </div>
                 </div>
                 <div class="gallery-image">
                     <div class="image-wrapper">
-                        <img src="sentimentalyst.png" alt="sentimentalyst" class="zoomed-image"> <!-- Foto de um livro ou um filme -->
+                        <img src="/Portfolio/images/sentimentalyst.png" alt="sentimentalyst" class="zoomed-image"> <!-- Foto de um livro ou um filme -->
                         <div class="zoomed-text">... ler um livro ou ver filmes/séries, normalmente de ação, aventura, ficção científica e história, os meus estilos favoritos.</div>
                     </div>
                 </div>
                 <div class="gallery-image">
                     <div class="image-wrapper">
-                        <img src="sentimentalyst.png" alt="sentimentalyst" class="zoomed-image"> <!-- Foto de algum momento histórico -->
+                        <img src="/Portfolio/images/sentimentalyst.png" alt="sentimentalyst" class="zoomed-image"> <!-- Foto de algum momento histórico -->
                         <div class="zoomed-text">... Também gosto de tirar tempo para aprender um pouco mais sobre o mundo que nos rodeia e o seu passado, pois adoro história, ...</div>
                     </div>
                 </div>
                 <div class="gallery-image">
                     <div class="image-wrapper">
-                        <img src="sentimentalyst.png" alt="sentimentalyst" class="zoomed-image"> <!-- Foto do Espaço -->
+                        <img src="/Portfolio/images/espaco.jpg" alt="sentimentalyst" class="zoomed-image"> <!-- Foto do Espaço -->
                         <div class="zoomed-text">... e aprender mais sobre matérias científicas, principalmente quando se tratam do Espaço 🤩.</div>
                     </div>
                 </div>
                 <div class="gallery-image">
                     <div class="image-wrapper">
-                        <img src="sentimentalyst.png" alt="sentimentalyst" class="zoomed-image"> <!-- Foto da guitarra -->
+                        <img src="/Portfolio/images/sentimentalyst.png" alt="sentimentalyst" class="zoomed-image"> <!-- Foto da guitarra -->
                         <div class="zoomed-text">A música é a minha grande paixão, adoro tocar guitarra, um dos meus intrumentos favoritos e que estou a aprender a tocar sozinho, ...</div>
                     </div>
                 </div>
                 <div class="gallery-image">
                     <div class="image-wrapper">
-                        <img src="sentimentalyst.png" alt="sentimentalyst" class="zoomed-image"> <!-- Foto da guitarra -->
-                        <div class="zoomed-text">A música é a minha grande paixão, adoro tocar guitarra, um dos meus intrumentos favoritos e que estou a aprender a tocar sozinho, ...</div>
-                    </div>
-                </div>
-                <div class="gallery-image">
-                    <div class="image-wrapper">
-                        <img src="sentimentalyst.png" alt="sentimentalyst" class="zoomed-image"> <!-- Foto do coro -->
+                        <img src="/Portfolio/images/coro2.jpg" alt="sentimentalyst" class="zoomed-image"> <!-- Foto do coro -->
                         <div class="zoomed-text">... e também adoro cantar, na verdade gosto tanto que faço parte de um coro! É o Coro Misto da Beira Interior, onde já sou membro há mais de 7 anos, ...</div>
                     </div>
                 </div>
                 <div class="gallery-image">
                     <div class="image-wrapper last">
-                        <img src="sentimentalyst.png" alt="sentimentalyst" class="zoomed-image"> <!-- Foto do coro -->
+                        <img src="/Portfolio/images/coro3.JPG" alt="sentimentalyst" class="zoomed-image"> <!-- Foto do coro -->
                         <div class="zoomed-text">... e onde já passei muitas boas memórias, tendo viajado para outros países várias vezes para fazer concertos e participar em concursos.</div>
                     </div>
                 </div>
@@ -149,55 +143,6 @@
             <button class="prev-btn"><i class="fas fa-chevron-left"></i></button>
             <button class="next-btn"><i class="fas fa-chevron-right"></i></button>
         </div>    
-    </section>
-
-    <section class="timeline hidden">
-        <h2>O Meu Percurso</h2>
-        <div class="line"></div>
-        <div class="point" style="left: 10%;">
-          <div class="circle"></div>
-          <div class="content">
-            <h3>2018</h3>
-            <p class="big">Entrada no secundário</p>
-            <p class="medium">No Curso de Ciências e Tecnologias</p>
-            <p class="medium">Na Escola Secundária Frei Heitor Pinto (ESFHP)</p>
-          </div>
-        </div>
-        <div class="point" style="left: 30%;">
-          <div class="circle"></div>
-          <div class="content">
-            <h3>2021</h3>
-            <p class="big">Entrada no Ensino Superior</p>
-            <p class="medium">Na Licenciatura em Engenharia Informática</p>
-            <p class="medium">Na Universidade da Beira Interior (UBI)</p>
-          </div>
-        </div>
-        <div class="point" style="left: 50%;">
-          <div class="circle"></div>
-          <div class="content">
-            <h3>2022</h3>
-            <p class="big">Trabalho como Barman</p>
-            <p class="medium">Nos Meses de Julho e Agosto</p>
-            <p class="medium">Na Piscina da Orca (Fundão)</p>
-          </div>
-        </div>
-        <div class="point" style="left: 70%;">
-          <div class="circle"></div>
-          <div class="content">
-            <h3>2023</h3>
-            <p class="big">Estágio de Verão</p>
-            <p class="medium">Entre os Meses de Julho e Setembro</p>
-            <p class="medium">Na Celfinet, Departamento de Data Management & Analytics</p>
-          </div>
-        </div>
-        <div class="point" style="left: 90%;">
-          <div class="circle"></div>
-          <div class="content">
-            <h3>2024</h3>
-            <p class="big">Conclusão da Licenciatura</p>
-            <p class="medium">Em Engenharia Informática</p>
-          </div>
-        </div>
     </section>    
 
     <section id="projects" class="hidden">
@@ -206,7 +151,7 @@
             <div class="card">
                 <a href="https://github.com/zazedd/solar-system" target="_blank"></a>
                 <div class="card-content">
-                    <img src="solarSystem.png" alt="solarSystem">
+                    <img src="/Portfolio/images/solarSystem.png" alt="solarSystem">
                     <h3>Sistema Solar</h3>  
                     <h4>Uma pequena simulação gráfica, em OpenGL (C++)</h4>
                 </div>
@@ -214,7 +159,7 @@
             <div class="card">
                 <a href="https://github.com/zazedd/sentimentalyst" target="_blank"></a>
                 <div class="card-content">
-                    <img src="sentimentalyst.png" alt="sentimentalyst">
+                    <img src="/Portfolio/images/sentimentalyst.png" alt="sentimentalyst">
                     <h3>Sentimentalyst</h3>  
                     <h4>Uma aplicação que deteta os sentimentos de uma frase</h4>
                 </div>
@@ -222,7 +167,7 @@
             <div class="card">
                 <a href="https://github.com/zazedd/money" target="_blank"></a>
                 <div class="card-content">
-                    <img src="money.png" alt="money">
+                    <img src="/Portfolio/images/money.png" alt="money">
                     <h3>Money</h3>  
                     <h4>Uma aplicação móvel para gestão de orçamentos de uma empresa de construção civil</h4>
                 </div>
@@ -233,23 +178,23 @@
     <section class="hidden">
         <h2>Certificados</h2>
         <div id="certs">
-            <div class="certificate-box" onclick="openPdf('Summer_Internship.pdf')">
+            <div class="certificate-box" onclick="openPdf('/Portfolio/images/Summer_Internship.pdf')">
                 <h3>Estágio de Verão</h3>
                 <p>No Departamento de Data Management & Analytics da Celfinet</p>
             </div>
-            <div class="certificate-box" onclick="openPdf('IOT.pdf')">
+            <div class="certificate-box" onclick="openPdf('/Portfolio/images/IOT.pdf')">
                 <h3>Internet Das Coisas</h3>
                 <p>Formação Sobre os Conceitos Básicos da Internet Of Things (IOT)</p>
             </div>
-            <div class="certificate-box" onclick="openPdf('Telecom.pdf')">
+            <div class="certificate-box" onclick="openPdf('/Portfolio/images/Telecom.pdf')">
                 <h3>Telecomunicações</h3>
                 <p>Formação Sobre os Conceitos Básicos de Telecomunicações</p>
             </div>
-            <div class="certificate-box" onclick="openPdf('Scrum.pdf')">
+            <div class="certificate-box" onclick="openPdf('/Portfolio/images/Scrum.pdf')">
                 <h3>Scrum</h3>
                 <p>Gestão de Projetos com Métodos Ágeis</p>
             </div>
-            <div class="certificate-box" onclick="openPdf('PSAnimais.pdf')">
+            <div class="certificate-box" onclick="openPdf('/Portfolio/images/PSAnimais.pdf')">
                 <h3>Primeiros Socorros Animais</h3>
                 <p>Nunca se sabe quando vai ser preciso! 😉</p>
             </div>
